--- a/printpdffile/src/main/AndroidManifest.xml
+++ b/printpdffile/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application>
-        <activity android:name=".PrintPDFActivity">
+        <activity android:name=".FindBluetoothDeviceActivity">
         </activity>
     </application>
 
